# eigenorg

./: .gitignore  Cargo.toml  DESIGN.md  MODEL.md  README.md  assumptions.json  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml
docs/: CONTRACTS.md  eli18.html
docs/schema/: config.v1.schema.json  output.v1.schema.json
fixtures/hash/: crossTarget.json  crossTarget.sha256
fixtures/invalid/: badTopology.json  iterationsTooLow.json  missingOrgBlock.json  missingTeamBlock.json  ownershipLayersTooHigh.json  unknownCapabilityKey.json  unknownField.json
fixtures/invalid_serde_only/: badTeamMixSum.json  layerOwnerCountLengthMismatch.json  matrixCountConflict.json  paramOverridesUnknownKey.json  recoveryOwnerMismatch.json
fixtures/scenarios/: accountabilityDiffusion__coOwned.json  accountabilityDiffusion__singleOwner.json  allHumanBaseline__main.json  autonomousSquad__main.json  balancedHybrid__main.json  committeeInversion__allHuman.json  committeeInversion__committeeDiffuse.json  committeeInversion__committeeSingle.json  coordinationCollapse__main.json  dunbarCliff__main.json  dunbarCliff__mainNeutral.json  fasterDysfunction__sh3.json  fasterDysfunction__sh3NoAi.json  fasterDysfunction__sh7.json  fasterDysfunction__sh7NoAi.json  hollowMiddle__hollow.json  hollowMiddle__humanPm.json  layerConfigurator__aiMiddle.json  layerConfigurator__aiMiddleNeutral.json  matrix__dualBossClearDecider.json  matrix__dualBossNoTiebreak.json  matrix__singleBoss.json  paramOverridesShapes__both.json  prioritizationTax__oneLayer.json  prioritizationTax__threeLayer.json  reviewBottleneck__bottleneck.json  reviewBottleneck__unbounded.json
js/: main.js
js/charts/: entropy.js  team.js
js/tests/: assumptions.test.mjs  card.test.mjs  glossary.test.mjs  (+6 more)
model/: goldens.json  params.json
pkg/: LICENSE  eigenorg.d.ts  eigenorg.js  eigenorg_bg.wasm  eigenorg_bg.wasm.d.ts  package.json
presets/: prioritizationTax.json
scripts/: build.sh  check_no_coefficient_literals.mjs  check_no_coefficient_literals.test.mjs  check_no_external_requests.sh  check_no_external_requests.test.mjs  check_pkg_import_isolation.sh  check_pkg_import_isolation.test.mjs  check_term_coverage.mjs  check_term_coverage.test.mjs  check_version_pairing.mjs  extract_params.mjs  node-types.d.ts  noop.js  serve.mjs
src/: api.rs  config.rs  engine.rs  entities.rs  goldens.rs  lib.rs  montecarlo.rs  output.rs  params.rs  rng.rs  tasks.rs
tests/: cross_target.rs  determinism.rs  double_validation.rs  golden.rs  mc_budget.rs  mechanics_lint.rs  replay.rs  stability.rs
www/: assumptions.json  index.html  style.css
(+61 files in other folders)
